[gd_scene load_steps=5 format=3 uid="uid://gpyqoxy8ha4q"]

[ext_resource type="Script" path="res://Resources/Merchants/merchant_class.gd" id="1_8n36x"]
[ext_resource type="Texture2D" uid="uid://cdr6q6ac2w38h" path="res://Resources/Art/Merchants/karver_merchant.png" id="2_x4n7r"]
[ext_resource type="Script" path="res://Scripts/Merchants/jack_variables.gd" id="3_7ctya"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h717c"]
size = Vector2(146, 180)

[node name="Jack" type="Node2D"]
script = ExtResource("1_8n36x")

[node name="MerchantImage" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_x4n7r")

[node name="BorderImage" type="Sprite2D" parent="."]
unique_name_in_owner = true

[node name="MerchantVariables" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_7ctya")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_h717c")
